--- a/src/main/resources/messages_sk.properties
+++ b/src/main/resources/messages_sk.properties
@@ -1,6 +1,6 @@
 settings=Nastavenia
 scanner=Spusti? skenovanie
-plugins=Plugins
-star=Spusti?
-unstar=Vypnú?
-directory=Otvori? adresár
+plugins=Pluginy
+star=Hviezdi?
+unstar=Odhviezdi?
+directory=Otvor adresár
